feat: added more fields in user model and improved hoempage ui
